--- a/app/src/main/assets/simulation/index.html
+++ b/app/src/main/assets/simulation/index.html
@@ -15,9 +15,9 @@
 <body>
 <canvas id="c"></canvas>
 <div class="hud">
-    <div><b>검사 구동 로봇 시뮬레이션</b></div>
-    <div>입력단위: mm (내부 m)</div>
-    <div id="poseText">x:0 y:0 z:0 pan:0 tilt:0</div>
+    <!--    <div><b>검사 구동 로봇 시뮬레이션</b></div>-->
+    <div><b>입력단위: mm (내부 m)</b></div>
+    <div id="poseText"><b>x:0 y:0 z:0 pan:0 tilt:0</b></div>
 </div>
 
 <script>
@@ -38,6 +38,13 @@
     controls.enableDamping = true;
     controls.dampingFactor = 0.08;
     controls.target.set(SIZE_X/2,SIZE_Y/2,SIZE_Z/2);
+    const initialZoomOut = 2.0; // 1보다 크면 멀리(작게), 1보다 작으면 가까이(크게)
+    {
+        const v = new THREE.Vector3().subVectors(camera.position, controls.target);
+        v.multiplyScalar(initialZoomOut);
+        camera.position.copy(controls.target).add(v);
+        controls.update();
+    }
     controls.minDistance = 0.5;
     controls.maxDistance = 8;
     controls.screenSpacePanning = true;
@@ -61,8 +68,8 @@
 
     // ===== 빔 생성기 =====
     function makeBeam(len, axis='x', size=0.04, mat=matFrame){
-      const g = axis==='x'?[len,size,size]:axis==='y'?[size,len,size]:[size,size,len];
-      return new THREE.Mesh(new THREE.BoxGeometry(...g), mat);
+        const g = axis==='x'?[len,size,size]:axis==='y'?[size,len,size]:[size,size,len];
+        return new THREE.Mesh(new THREE.BoxGeometry(...g), mat);
     }
 
     // ===== 프레임 구조 =====
@@ -70,28 +77,28 @@
 
     // 바닥
     (() => {
-      const s=0.04, g=new THREE.Group();
-      const fx1=makeBeam(SIZE_X,'x'); fx1.position.set(SIZE_X/2,s/2,0);
-      const fx2=makeBeam(SIZE_X,'x'); fx2.position.set(SIZE_X/2,s/2,SIZE_Z);
-      const fz1=makeBeam(SIZE_Z,'z'); fz1.position.set(0,s/2,SIZE_Z/2);
-      const fz2=makeBeam(SIZE_Z,'z'); fz2.position.set(SIZE_X,s/2,SIZE_Z/2);
-      g.add(fx1,fx2,fz1,fz2);
-      frame.add(g);
+        const s=0.04, g=new THREE.Group();
+        const fx1=makeBeam(SIZE_X,'x'); fx1.position.set(SIZE_X/2,s/2,0);
+        const fx2=makeBeam(SIZE_X,'x'); fx2.position.set(SIZE_X/2,s/2,SIZE_Z);
+        const fz1=makeBeam(SIZE_Z,'z'); fz1.position.set(0,s/2,SIZE_Z/2);
+        const fz2=makeBeam(SIZE_Z,'z'); fz2.position.set(SIZE_X,s/2,SIZE_Z/2);
+        g.add(fx1,fx2,fz1,fz2);
+        frame.add(g);
     })();
 
     // 기둥
     (() => {
-      const s=0.04,g=new THREE.Group();
-      const cy2=makeBeam(SIZE_Y,'y'); cy2.position.set(0,SIZE_Y/2,SIZE_Z);
-      const cy4=makeBeam(SIZE_Y,'y'); cy4.position.set(SIZE_X,SIZE_Y/2,SIZE_Z);
-      g.add(cy2,cy4); frame.add(g);
+        const s=0.04,g=new THREE.Group();
+        const cy2=makeBeam(SIZE_Y,'y'); cy2.position.set(0,SIZE_Y/2,SIZE_Z);
+        const cy4=makeBeam(SIZE_Y,'y'); cy4.position.set(SIZE_X,SIZE_Y/2,SIZE_Z);
+        g.add(cy2,cy4); frame.add(g);
     })();
 
     // 상부
     (() => {
-      const s=0.04,g=new THREE.Group();
-      const tx2=makeBeam(SIZE_X,'x'); tx2.position.set(SIZE_X/2,SIZE_Y-s/2,SIZE_Z);
-      g.add(tx2); frame.add(g);
+        const s=0.04,g=new THREE.Group();
+        const tx2=makeBeam(SIZE_X,'x'); tx2.position.set(SIZE_X/2,SIZE_Y-s/2,SIZE_Z);
+        g.add(tx2); frame.add(g);
     })();
 
     // ===== 이동축 그룹 =====
@@ -141,13 +148,13 @@
 
     // --- 🔹 카메라 렌즈/하우징 추가 ---
     const lensMat = new THREE.MeshStandardMaterial({
-      color: 0x222831,
-      metalness: 0.6,
-      roughness: 0.4
+        color: 0x222831,
+        metalness: 0.6,
+        roughness: 0.4
     });
     const lensBody = new THREE.Mesh(
-      new THREE.CylinderGeometry(0.025, 0.03, 0.04, 32),
-      lensMat
+        new THREE.CylinderGeometry(0.025, 0.03, 0.04, 32),
+        lensMat
     );
     lensBody.rotation.x = Math.PI / 2;
     lensBody.position.set(0, 0, 0.06);
@@ -155,15 +162,15 @@
 
     // 렌즈 유리 (파란빛)
     const glassMat = new THREE.MeshStandardMaterial({
-      color: 0x2196f3,
-      metalness: 0.3,
-      roughness: 0.1,
-      transparent: true,
-      opacity: 0.6
+        color: 0x2196f3,
+        metalness: 0.3,
+        roughness: 0.1,
+        transparent: true,
+        opacity: 0.6
     });
     const glass = new THREE.Mesh(
-      new THREE.CircleGeometry(0.023, 32),
-      glassMat
+        new THREE.CircleGeometry(0.023, 32),
+        glassMat
     );
     glass.rotation.x = Math.PI / 2;
     glass.position.set(0, 0, 0.08);
@@ -182,53 +189,64 @@
     const clamp = (v,min,max)=>Math.max(min,Math.min(max,v));
 
     window.updateRobotPose = (pose)=>{
-      const x=(pose.x||0)*MM_TO_M, y=(pose.y||0)*MM_TO_M, z=(pose.z||0)*MM_TO_M;
-      const pan=pose.pan||0, tilt=pose.tilt||0;
+        const x=(pose.x||0)*MM_TO_M, y=(pose.y||0)*MM_TO_M, z=(pose.z||0)*MM_TO_M;
+        const pan=pose.pan||0, tilt=pose.tilt||0;
 
-      const cx=clamp(x,0,SIZE_X);
-      const cy=clamp(y,0,SIZE_Y);
-      const cz=clamp(z,0,SIZE_Z);
+        const cx=clamp(x,0,SIZE_X);
+        const cy=clamp(y,0,SIZE_Y);
+        const cz=clamp(z,0,SIZE_Z);
 
-      groupY.position.set(0,cy,0);   // Y 승강
-      groupX.position.set(cx,0,0);   // X 좌우
-      groupZ.position.set(0,0,cz);   // Z 전후 (위 레일+카메라)
+        groupY.position.set(0,cy,0);   // Y 승강
+        groupX.position.set(cx,0,0);   // X 좌우
+        groupZ.position.set(0,0,cz);   // Z 전후 (위 레일+카메라)
 
-      groupPan.rotation.y  = pan;    // X′ (좌우)
-      groupTilt.rotation.x = tilt;   // Y′ (상하)
+        groupPan.rotation.y  = pan;    // X′ (좌우)
+        groupTilt.rotation.x = tilt;   // Y′ (상하)
 
-      poseText.textContent =
-        `x:${Math.round(cx/MM_TO_M)}  y:${Math.round(cy/MM_TO_M)}  z:${Math.round(cz/MM_TO_M)}  pan:${pan.toFixed(2)}  tilt:${tilt.toFixed(2)}`;
+        poseText.textContent =
+            `x:${Math.round(cx/MM_TO_M)}  y:${Math.round(cy/MM_TO_M)}  z:${Math.round(cz/MM_TO_M)}  pan:${pan.toFixed(2)}  tilt:${tilt.toFixed(2)}`;
     };
 
     // ===== 리사이즈 & 렌더 루프 =====
     function resize(){
-      const w=canvas.clientWidth,h=canvas.clientHeight;
-      if(renderer.domElement.width!==w||renderer.domElement.height!==h){
-        renderer.setSize(w,h,false);
-        camera.aspect=w/h;
-        camera.updateProjectionMatrix();
-      }
+        const w=canvas.clientWidth,h=canvas.clientHeight;
+        if(renderer.domElement.width!==w||renderer.domElement.height!==h){
+            renderer.setSize(w,h,false);
+            camera.aspect=w/h;
+            camera.updateProjectionMatrix();
+        }
     }
     function animate(){
-      requestAnimationFrame(animate);
-      resize(); controls.update();
-      renderer.render(scene,camera);
+        requestAnimationFrame(animate);
+        resize(); controls.update();
+        renderer.render(scene,camera);
     }
     animate();
 
+    window.onMqttMessage = function(topic, msg) {
+        try {
+            if (!topic.startsWith("robot/simulation/")) return;
+            const pose = JSON.parse(msg);
+            if (pose && typeof pose.x === "number") {
+                window.updateRobotPose(pose);
+            }
+        } catch (e) {
+            console.error("MQTT 수신 파싱 오류:", e, msg);
+        }
+    };
     // ===== 데모 모드 (MQTT 없을 때 움직임 확인용) =====
-    (function demo(){
-      if(window.__DEMO_DISABLED__)return;
-      let t=0;
-      setInterval(()=>{
-        t+=0.02;
-        const x=(SIZE_X*0.5)+Math.sin(t)*(SIZE_X*0.4);
-        const y=(SIZE_Y*0.5)+Math.cos(t*0.6)*(SIZE_Y*0.4);
-        const z=(SIZE_Z*0.5)+Math.sin(t*0.8)*(SIZE_Z*0.45);
-        const pan=Math.sin(t*0.7)*0.6, tilt=Math.cos(t*0.9)*0.4;
-        window.updateRobotPose({x:x/MM_TO_M,y:y/MM_TO_M,z:z/MM_TO_M,pan,tilt});
-      },20);
-    })();
+    <!--    (function demo(){-->
+    <!--      if(window.__DEMO_DISABLED__)return;-->
+    <!--      let t=0;-->
+    <!--      setInterval(()=>{-->
+    <!--        t+=0.02;-->
+            const x=(SIZE_X*0.5)+Math.sin(t)*(SIZE_X*0.4);
+            const y=(SIZE_Y*0.5)+Math.cos(t*0.6)*(SIZE_Y*0.4);
+            const z=(SIZE_Z*0.5)+Math.sin(t*0.8)*(SIZE_Z*0.45);
+            const pan=Math.sin(t*0.7)*0.6, tilt=Math.cos(t*0.9)*0.4;
+    <!--        window.updateRobotPose({x:x/MM_TO_M,y:y/MM_TO_M,z:z/MM_TO_M,pan,tilt});-->
+    <!--      },20);-->
+    <!--    })();-->
 </script>
 </body>
 </html>
