--- a/app/src/main/assets/simulation/index.html
+++ b/app/src/main/assets/simulation/index.html
@@ -234,9 +234,9 @@
         groupZ.position.set(0, 0, zM);
 
         // 각도 입력(범위 보정)
-        const xPrimeIn = clamp(Number(pose.xPrimeDeg ?? 0), 0, 180);
-        const yPrimeIn = clamp(Number(pose.yPrimeDeg ?? 0), 0, 180);
-        const zPrimeIn = (Number(pose.zPrimeDeg ?? 0) % 360 + 360) % 360; // 음수 방지
+        const xPrimeIn = clamp(Number(pose.s1 ?? 0), 0, 180);
+        const yPrimeIn = clamp(Number(pose.s2 ?? 0), 0, 180);
+        const zPrimeIn = (Number(pose.s3 ?? 0) % 360 + 360) % 360; // 음수 방지
 
         // ★ 리버스 매핑: 입력 0° → 실제 180°
         const xPhys = 180 - xPrimeIn;                               // 0..180
@@ -276,7 +276,7 @@
             console.error("StateUpdate 파싱 오류:", e, msg);
         }
     };
-    //window.updateRobotPose({x:1000, y:1000, z:500, xPrimeDeg:90, yPrimeDeg:90, zPrimeDeg:90});
+    //window.updateRobotPose({x:1000, y:1000, z:500, s1:90, s2:90, s3:90});
     /* ====================== 데모 ====================== */
     // (function demo(){
     //     let t = 0;
@@ -306,20 +306,20 @@
     //         // === 각도 (°) ===
     //         // X′: 0~180 왕복
     //         const xAngPhase = (Math.sin(t * 0.7 + Math.PI/4) * 0.5 + 0.5);
-    //         const xPrimeDeg = ANG_MIN + (ANG_MAX - ANG_MIN) * xAngPhase;
+    //         const s1 = ANG_MIN + (ANG_MAX - ANG_MIN) * xAngPhase;
     //
     //         // Y′: 180~0 반대위상 왕복
     //         const yAngPhase = (Math.sin(t * 0.9 + Math.PI) * 0.5 + 0.5);
-    //         const yPrimeDeg = ANG_MIN + (ANG_MAX - ANG_MIN) * yAngPhase;
+    //         const s2 = ANG_MIN + (ANG_MAX - ANG_MIN) * yAngPhase;
     //
     //         // Z′: 0~360 왕복 (방향 반전 포함)
     //         zAngle += zDir * 2.2; // 회전 속도
     //         if (zAngle >= ZANG_MAX) { zAngle = ZANG_MAX; zDir = -1; }
     //         if (zAngle <= ZANG_MIN) { zAngle = ZANG_MIN; zDir = 1; }
-    //         const zPrimeDeg = zAngle;
+    //         const s3 = zAngle;
     //
     //         // === 적용 ===
-    //         window.updateRobotPose({ x, y, z, xPrimeDeg, yPrimeDeg, zPrimeDeg });
+    //         window.updateRobotPose({ x, y, z, s1, s2, s3 });
     //
     //     }, 30);
     // })();
